--- a/styles/smart.module.css
+++ b/styles/smart.module.css
@@ -217,7 +217,7 @@
     margin: 80px auto;
 }
 
-.cform input {
+.cform label {
     margin: 30px auto;
     border-style: hidden;
     border-bottom: solid white 2px;
@@ -226,6 +226,11 @@
     width: 25%;
     font-size: 16px;
     padding-bottom: 20px;
+}
+
+.cform input {
+    background-color: #515151;
+    border-style: hidden;
 }
 
 .subbutton {
@@ -253,16 +258,32 @@
     color: white;
 }
 
+.cal button:disabled {
+    color: white;
+    opacity: 0.3;
+    background-color: #515151 !important;
+}
+
+.caltile --now {
+    background: rgba(0, 0, 0, 0.25);
+}
+
 .cal button:hover {
     color: #515151!important;
     background: white!important;
-    border-radius: 50%!important;
+    border-radius: 50px!important;
 }
 
 .cal button:active {
     color: #515151!important;
     background: white!important;
-    border-radius: 50%!important;
+    border-radius: 50px!important;
+}
+
+.caltile button:disabled {
+    color: white;
+    opacity: 0.3;
+    background-color: #515151 !important;
 }
 
 .hour {
