--- a/styles/smart.module.css
+++ b/styles/smart.module.css
@@ -1,5 +1,5 @@
 .smart {
-    border-radius: 280px;
+    border-radius: 50%;
     border: solid #515151 10px;
     margin-top: -140px;
     display: block;
@@ -188,7 +188,7 @@
 
 .businesscard {
     background-color: #515151;
-    width: 600px;
+    width: 45%;
     margin: 2px;
     text-align: center;
 }
@@ -212,7 +212,7 @@
 
 .cform {
     background-color: #515151;
-    width: 90%;
+    width: 85%;
     padding: 50px;
     margin: 80px auto;
 }
@@ -301,4 +301,43 @@
     margin-bottom: 30px;
     width: 80%;
     text-align: center;
+}
+
+.owlCarouselUl {
+    margin: 0px auto 80px;
+    padding: 0px 80px;
+}
+
+@media only screen and (max-width: 768px) {
+    .businesscard {
+        width: 90%;
+        margin: 30px auto 0px;
+    }
+    .intro,
+    .heading,
+    .gallery,
+    .cform {
+        margin: 30px auto;
+    }
+    .heading {
+        font-size: 30px;
+    }
+    .intro {
+        font-size: 15px;
+    }
+    .electronicsGadgets {
+        font-size: 30px;
+    }
+    .cform div {
+        flex-direction: column;
+    }
+    .cform div input {
+        width: 90%;
+    }
+    .subbutton {
+        width: 50%;
+    }
+    .smart {
+        margin-top: -70px;
+    }
 }
